# Generic_Arm

./: README.md
arm_bringup/: CMakeLists.txt  package.xml
arm_bringup/launch/: main_real.launch  main_sim.launch  real_bringup.launch  sim_bringup.launch
arm_bringup/launch/include/: connect_real_arm.launch  serial.launch
arm_bringup/src/: pub_to_arduino_class.cpp  pub_to_arduino_class_example_with_pca9685_driver.cpp
arm_bringup/worlds/: box_world.world
arm_control/: CMakeLists.txt  package.xml
arm_control/config/generic/: generic_arm_control.yaml  hardware_interface_settings.yaml
arm_control/launch/: control.launch  hardware_interface.launch
arm_description/: CMakeLists.txt  package.xml
arm_description/launch/: description.launch
arm_description/urdf/bases/kinect_base/: kinect_base.gazebo.xacro  kinect_base.urdf.xacro
arm_description/urdf/objects/box_black/: box_black.urdf
arm_description/urdf/robots/generic_arm/: configuration.urdf.xacro  (+2 more)
arm_moveit_config/config/: generic_arm.srdf
arm_msgs/: CMakeLists.txt  package.xml
arm_viz/: CMakeLists.txt  package.xml
arm_viz/launch/: view_robot.launch
arm_viz/rviz/: basic.rviz  object_recognition.rviz  view_robot.rviz
data/arduino_code/to_arduino/: to_arduino.ino
moveit_interface/: CMakeLists.txt
moveit_interface/scripts/: pick_place_client.py
ros_control_boilerplate/: CHANGELOG.rst  CMakeLists.txt  README.md
ros_control_boilerplate/myrobot_control/: CMakeLists.txt  package.xml
ros_control_boilerplate/myrobot_control/include/myrobot_control/: myrobot_hw_interface.h
ros_control_boilerplate/myrobot_control/launch/: myrobot_hardware.launch  myrobot_simulation.launch  myrobot_test_trajectory.launch  myrobot_visualize.launch
ros_control_boilerplate/myrobot_control/src/: myrobot_hw_interface.cpp  myrobot_hw_main.cpp
safe_spawner/: safe_spawner_basic.sh  safe_spawner_object_recognition.sh  safe_spawner_pseudo_real.sh
sensor_stick/: CMakeLists.txt  model.sav  model_boxes.sav
sensor_stick/Exercise-1/: RANSAC.py
sensor_stick/launch/: object_recognition.launch  robot_description.launch  robot_spawn.launch  training.launch
sensor_stick/models/box_black/: model.config  model.sdf
sensor_stick/models/box_green/: model.config  model.sdf
sensor_stick/models/box_orange/: model.config  model.sdf
sensor_stick/models/box_red/: model.config  model.sdf
sensor_stick/models/box_table/: model.config  model.sdf
sensor_stick/models/monster/: model.sdf
sensor_stick/models/white_ball/: model.config  model.sdf
sensor_stick/scripts/: capture_features.py  object_recognition.py  segmentation.py  train_svm.py
sensor_stick/src/: cloud_transformer.cpp
sensor_stick/src/sensor_stick/: pcl_helper.py
(+2 files in other folders)
